# flask-limiter

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .landscape.yml  .overcommit.yml  .readthedocs.yml  .style.yapf  .travis.yml  CLASSIFIERS  CONTRIBUTIONS.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  docker-compose.yml  push-release.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  shippable.yml  tag.sh  versioneer.py
.github/: FUNDING.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature.md
.github/workflows/: lint.yml  main.yml
doc/: Makefile
doc/source/: api.rst  changelog.rst  cli.rst  conf.py  configuration.rst  development.rst  index.rst  misc.rst  recipes.rst  strategies.rst  theme_config.py
doc/source/_static/: colors.css  custom.css  limiter.css
doc/source/_templates/: sidebarintro.html
examples/: kitchensink.py  sample.py
flask_limiter/: __init__.py  _cli.py  _extension.py  _limits.py  _manager.py  _typing.py  _version.py  commands.py  constants.py  errors.py  extension.py  limits.py  manager.py  storage.py  strategies.py  typing.py  util.py  wrappers.py
flask_limiter/backports/: counter.py  total_ordering.py
flask_limiter/contrib/: __init__.py  util.py
flask_ratelimit/: _version.py  version.py
flask_ratelimits/: _version.py  extension.py  limits.py  parser.py  storage.py  util.py
requirements/: ci.txt  dev.txt  docs.txt  main.txt  test.txt
scripts/: github_release_notes.sh
tests/: __init__.py  conftest.py  test_blueprints.py  test_commands.py  test_configuration.py  test_context_manager.py  test_decorators.py  test_deprecation.py  test_error_handling.py  test_flask_ext.py  test_limit_granularities.py  test_ratelimit_parser.py  test_regressions.py  test_storage.py  test_strategy.py  test_views.py
